# gql2sql

./: .gitignore  Cargo.toml  LICENSE  README.md  bindings.json  deny.toml  version.txt
.cargo/: config  config.toml
.github/workflows/: CI.yml  WASM.yml  lint.yml
app-backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  deny.toml  docker-compose.yml  fly.toml  makefile  renovate.json
app-backend/.github/workflows/: deploy.yml
app-backend/docs/: openapi.yml
app-backend/migrations/: 00_init.sql
app-backend/scripts/: init.sh
app-backend/src/: config.rs  server.rs
app-backend/src/routes/: mod.rs
app-backend/src/routes/auth/: mod.rs
app-backend/src/routes/gql/: mod.rs
app-backend/src/routes/pg/: add_column.rs  add_column_index.rs  add_table.rs  get_database_schema.rs  get_table_schema.rs  mod.rs  update_column.rs  update_table.rs
app-backend/src/utils/: app_error.rs  auth.rs  is_valid_snake_case.rs  middleware.rs  mod.rs  nanoid.rs
cache_tags/: Cargo.toml
cache_tags/src/: lib.rs
gql2sql/: .gitignore  Cargo.toml
gql2sql-wasm/: Cargo.toml
gql2sql-wasm/demo/: index.html
gql2sql-wasm/src/: lib.rs
gql2sql-wasm/tests/: web.rs
gql2sql/benches/: transform.rs
gql2sql/src/: consts.rs  lib.rs
gql2sql/src/snapshots/: gql2sql__tests__group_by_query-2.snap  gql2sql__tests__group_by_query.snap  gql2sql__tests__id_ignore.snap  gql2sql__tests__mutation_delete.snap  gql2sql__tests__mutation_delete.snap.new  gql2sql__tests__mutation_empty_insert.snap  gql2sql__tests__mutation_image-2.snap  gql2sql__tests__mutation_image.snap  gql2sql__tests__mutation_insert.snap  gql2sql__tests__mutation_update.snap  gql2sql__tests__nested_playground-2.snap  gql2sql__tests__nested_playground.snap  gql2sql__tests__nested_playground.snap.new  gql2sql__tests__nested_query-2.snap  gql2sql__tests__nested_query.snap  gql2sql__tests__query_andre-2.snap  gql2sql__tests__query_andre.snap  gql2sql__tests__query_andre.snap.new  gql2sql__tests__query_distinct.snap  gql2sql__tests__query_frag.snap  gql2sql__tests__query_many_to_many.snap  gql2sql__tests__query_mega.snap  gql2sql__tests__query_schema_arg.snap  gql2sql__tests__query_simple_filter.snap  gql2sql__tests__query_static.snap  gql2sql__tests__query_sub_agg.snap  gql2sql__tests__query_wrap_arg.snap  gql2sql__tests__simple.snap  gql2sql__tests__simple_ignore.snap
gql2sql_deno/: Cargo.toml  bindings.json
gql2sql_deno/bench/: gql2sql_bench.ts
gql2sql_deno/bindings/: bindings.ts
gql2sql_deno/src/: lib.rs
gql2sql_deno/test/: gql2sql_test.ts
gql2sql_lambda/: Cargo.toml
gql2sql_lambda/src/: main.rs
gql2sql_node/: Cargo.toml  README.md  index.d.ts  index.js  package.json  pnpm-lock.yaml  simple-test.js
gql2sql_node/.github/workflows/: CI.yml
gql2sql_node/__test__/: index.spec.ts  index.spec.ts.md  index.spec.ts.snap
gql2sql_node/benchmark/: bench.ts
gql2sql_node/npm/android-arm-eabi/: README.md  package.json
gql2sql_node/npm/android-arm64/: README.md  package.json
gql2sql_node/npm/darwin-arm64/: README.md  package.json
gql2sql_node/npm/darwin-x64/: README.md  package.json
gql2sql_node/npm/freebsd-x64/: README.md  package.json
gql2sql_node/npm/linux-arm-gnueabihf/: README.md  package.json
gql2sql_node/npm/linux-arm64-gnu/: README.md  package.json
gql2sql_node/npm/linux-arm64-musl/: README.md  package.json
gql2sql_node/npm/linux-x64-gnu/: README.md  package.json
gql2sql_node/npm/linux-x64-musl/: README.md  package.json
gql2sql_node/npm/win32-arm64-msvc/: README.md  package.json
gql2sql_node/npm/win32-ia32-msvc/: README.md  package.json
gql2sql_node/npm/win32-x64-msvc/: README.md  package.json
gql2sql_node/src/: lib.rs
gql2sql_server/: Cargo.toml
gql2sql_server/src/: main.rs
gql2sql_wasm/: Cargo.toml
gql2sql_wasm/src/: lib.rs
gql2sql_worker/: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  wrangler.toml
gql2sql_worker/src/: lib.rs
scripts/: publish.sh
