[package]
name = "app-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.70"
axum = "0.6.11"
dotenvy = "0.15.6"
envy = "0.4.2"
http = "0.2.9"
hyper = { version = "0.14.25", features = ["full"] }
jsonwebtoken = "8.3.0"
nanoid = "0.4.0"
regex = "1.7.1"
reqwest = { version = "0.11.15", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "all-types"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "std", "fmt", "registry"] }
validator = { version = "0.16.0", features = ["derive", "phone"] }
