[package]
name = "cache_tags"
version = "3.0.26"
edition = "2021"
description = "Cache tags for gql2sql"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/brevitybuilder/gql2sql"
repository = "https://github.com/brevitybuilder/gql2sql"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.107"
