[package]
name = "gql2sql-wasm"
version = "0.1.1-2"
authors = ["Nick Randall <nicksrandall@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[build]
rustflags = ["-C", "target-cpu=native"]
rustdocflags = ["-C", "target-cpu=native"]

[target.wasm32-unknown-unknown]
rustflags = ["-C", "target-feature=+simd128"]

[target.wasm32-wasi]
rustflags = ["-C", "target-feature=+simd128"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
gql2sql = { path = "../gql2sql" }
serde = { version = "1.0.165", features = ["derive"] }
async-graphql-parser = "5.0.10"
simd-json = "0.10.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
