[package]
name = "gql2sql-wasm"
version = "3.0.35"
authors = ["Nick Randall <nicksrandall@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.87"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
gql2sql = { path = "../gql2sql" }
serde = { version = "1.0.192", features = ["derive"] }
async-graphql-parser = "6.0.9"
serde_json = "1.0.107"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
