[package]
name = "gql2sql"
version = "3.0.55"
edition = "2021"
description = "GraphQL to SQL transpiler"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/brevitybuilder/gql2sql"
repository = "https://github.com/brevitybuilder/gql2sql"
readme = "../README.md"

[dependencies]
anyhow = "1.0"
graphql-parser = "0.4"
async-graphql-parser = "7.0.7"
async-graphql-value = "7.0.7"
sqlparser = "0.46"
indexmap = "2.3.0"
lazy_static = "1.5.0"
regex = "1.10.6"
serde_json = "1.0.122"

[dev-dependencies]
criterion = "0.5"
insta = { version = "1.39.0", features = ["yaml"] }
pretty_assertions = "1.4"

[[bench]]
name = "transform"
harness = false

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
