[package]
name = "gql2sql_deno"
version = "0.1.12"
edition = "2021"
publish = false

[lib]
name = "gql2sql"
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gql2sql = { path = "../gql2sql" }
async-graphql-parser = "5.0.8"
deno_bindgen = "0.8.0"
serde = { version = "1", features = ["derive"] }
