[package]
name = "gql2sql_lambda"
version = "0.1.0"
edition = "2021"
publish = false

# Starting in Rust 1.62 you can use `cargo add` to add dependencies
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation)
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
gql2sql = { path = "../gql2sql" }
lambda_http = { version = "0.7", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.7"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres" ] }
serde = { version = "1.0.152", features = ["derive"] }
graphql-parser = "0.4.0"
jemallocator = "0.5.0"
serde_json = "1.0.93"
