[package]
authors = ["Nick Randall <nick@brevity.io>"]
edition = "2021"
name = "gql2sql_node"
version = "2.0.51"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
napi = { version = "2", features = ["serde-json", "error_anyhow", "anyhow"] }
napi-derive = "2"
gql2sql = { path = "../gql2sql" }
async-graphql-parser = "7.0.3"
anyhow = "1.0.82"
serde_json = "1.0.116"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
