[package]
name = "gql2sql_server"
version = "0.1.7"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gql2sql = { path = "../gql2sql" }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.96", features = ["raw_value"] }
async-graphql-parser = "5.0.7"
jemallocator = "0.5.0"
axum = { version = "0.6.15", features = ["headers"] }
tokio = { version = "1.27", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "any", "postgres"] }
tower-http = { version = "0.4.0", features = ["compression-br", "compression-gzip", "propagate-header", "sensitive-headers", "set-header", "trace", "validate-request", "auth"] }
http = "0.2.9"
dotenvy = "0.15.7"

