[package]
name = "gql2sql_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
gql2sql = { path = "../gql2sql" }
graphql-parser = "0.4.0"
js-sys = "0.3.60"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.83"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
lto = true
opt-level = 's'

[dev-dependencies]
pretty_assertions = "1.3.0"
wasm-bindgen-test = "0.3.33"
