[package]
name = "gql2sql_wasm"
version = "0.1.8"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
gql2sql = { path = "../gql2sql" }
serde = { version = "1.0", features = ["derive"] }
async-graphql-parser = "5.0.7"
wasm-bindgen = "0.2.84"

[profile.release]
lto = true
opt-level = 's'

[dev-dependencies]
pretty_assertions = "1.3.0"
wasm-bindgen-test = "0.3.34"
