[package]
name = "gql2sql-worker"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.13"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
graphql-parser = "0.4.0"
gql2sql = { path = "../gql2sql" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
