[package]
name = "gql2sql-worker"
version = "1.0.8"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.16"
serde_json = { version = "1.0.96", features = ["raw_value"] }
serde = { version = "1.0.163", features = ["derive"] }
async-graphql-parser = "5.0.9"
gql2sql = { path = "../gql2sql" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.5.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
